--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,7 @@
     <%= link_to "Login", new_user_session_path %>
     <% else %>
     <%= link_to "Edit Profile", edit_user_registration_path %> | 
+    <%= link_to "Enter Chatroom", chatroom_path %> | 
     <%= link_to "Update Password", edit_user_password_path %> | 
     <%= link_to "Signout", destroy_user_session_path, method: :delete %>
     <% end %>
